# V2Music

./: .gitignore  README.md  audio_encode.sl  decode.py  encode.py  music_sep.sl  pyproject.toml
FeatureExtraction/: FeatureExtraction.py
err/: download_job_64575903_0.err  download_job_64575903_1.err  download_job_64575903_2.err  download_job_64575903_3.err  download_job_64575903_4.err  download_job_64575903_5.err  download_job_64575903_6.err  download_job_64575903_7.err  download_job_64575903_8.err  download_job_64575903_9.err  download_job_64608158_0.err  download_job_64608158_1.err  download_job_64608158_2.err  download_job_64608158_3.err  download_job_64608158_4.err  download_job_64608158_5.err  download_job_64608158_6.err  download_job_64608158_7.err  download_job_64608158_8.err  download_job_64608158_9.err  download_job_64649948_0.err  download_job_64649948_1.err  download_job_64649948_2.err  download_job_64649948_3.err  download_job_64649948_4.err  download_job_64649948_5.err  download_job_64649948_6.err  download_job_64649948_7.err  download_job_64649948_8.err  download_job_64649948_9.err  download_job_64706758_0.err  download_job_64706758_1.err  download_job_64706758_2.err  download_job_64706758_3.err  download_job_64706758_4.err  download_job_64706758_5.err  download_job_64706758_6.err  download_job_64706758_7.err
eval_logs/: eval.txt
notebooks/: DataLoaderTest.ipynb  FeatureExtractTest.ipynb  SegVid.ipynb  Train Test Split.ipynb  Vid2Music.ipynb
preprocessing/: FeatureExtraction.py  V2M-20k.txt  cookies.txt  download.ipynb  download.py  download.sl  (+7 more)
(+58 files in other folders)
