[project]
name = "v2music"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ffmpeg>=1.4",
    "ffprobe>=0.5",
    "pandas>=2.2.3",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.51.2",
    "yt-dlp[default]>=2025.3.31",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]
