[project]
name = "v2music"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.5.0",
    "demucs>=4.0.1",
    "ffmpeg>=1.4",
    "ffprobe>=0.5",
    "librosa>=0.11.0",
    "pandas>=2.2.3",
    "soundfile>=0.13.1",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.51.2",
    "yt-dlp[default]>=2025.3.31",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]
